<resources>
    <string name="app_name">HeartBit</string>
    <string name="add_record">New record - Quick check</string>
    <string name="app_logo">App logo</string>
    <string name="title_auth_activity">Auth UI demo</string>

    <!-- Chooser -->

    <string name="title_firestore_activity">Cloud Firestore Demo</string>
    <string name="title_realtime_database_activity">Real-time database demo</string>
    <string name="title_storage_activity">Storage Image Demo</string>

    <string name="desc_auth">Demonstrates the Firebase Auth UI flow, with customization options.</string>
    <string name="desc_firestore">Demonstrates using a FirestoreRecyclerAdapter to load data from Cloud Firestore into a RecyclerView for a basic chat app.</string>
    <string name="desc_realtime_database">Demonstrates using a FirebaseRecyclerAdapter to load data from Firebase Database into a RecyclerView for a basic chat app.</string>
    <string name="desc_storage">Demonstrates displaying an image from Cloud Storage using Glide.</string>

    <!-- Auth UI -->
    <string name="launch_title">FirebaseUI Auth Demo</string>
    <string name="sign_in">Sign in / Sign up</string>

    <string name="use_theme_header">Use theme:</string>
    <string name="default_theme">Default theme</string>
    <string name="purple_theme">Purple Theme</string>
    <string name="green_theme">Green Theme</string>
    <string name="dark_theme">Dark Theme</string>

    <string name="logo_header">Logo:</string>
    <string name="firebase_logo_label">Firebase Auth</string>
    <string name="google_logo_label">Google</string>
    <string name="no_logo_label">None</string>

    <string name="auth_providers_header">Use auth providers:</string>
    <string name="google_label">Google</string>
    <string name="facebook_label">Facebook</string>
    <string name="twitter_label">Twitter</string>
    <string name="email_label">Email</string>
    <string name="phone_label">Phone</string>

    <string name="configuration_required">Configuration is required - see README.md</string>
    <string name="google_label_missing_config">Google - configuration missing</string>
    <string name="facebook_label_missing_config">Facebook - configuration missing</string>
    <string name="twitter_label_missing_config">Twitter - configuration missing</string>

    <string name="tos_header">Terms of Service URL:</string>
    <string name="google_tos_label">Google TOS</string>
    <string name="firebase_tos_label">Firebase TOS</string>

    <string name="privacy_policy_header">Privacy Policy URL:</string>
    <string name="google_privacy_label">Google Privacy Policy</string>
    <string name="firebase_privacy_label">Firebase Privacy Policy</string>

    <string name="extra_google_scopes">Example extra Google scopes</string>
    <string name="drive_file_scope">Drive File</string>
    <string name="youtube_data_scope">Youtube data</string>

    <string name="extra_facebook_scopes">Example extra Facebook scopes</string>
    <string name="friends">Friends</string>
    <string name="photos">Photos</string>

    <string name="other_options_header">Other Options:</string>
    <string name="enable_credential_selector">Enable Smart Lock\'s credential selector</string>
    <string name="enable_hint_selector">Enable Smart Lock\'s hint selector</string>
    <string name="allow_new_email_acccount">Allow account creation if email does not exist.</string>
    <string name="require_name">Require first/last name with email accounts.</string>

    <string name="unknown_response">Unexpected onActivityResult response code</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">An unknown error occurred</string>

    <!-- Auth UI - Signed in -->
    <string name="signed_in_header">You are signed in!</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account_label">Delete account</string>

    <string name="sign_out_failed">Sign out failed</string>
    <string name="delete_account_failed">Delete account failed</string>

    <string name="user_profile_header">User profile:</string>
    <string name="profile_picture_content_desc">Profile picture</string>
    <string name="idp_token">IDP Token</string>
    <string name="idp_secret">IDP Secret</string>


    <!-- Storage -->
    <string name="choose_image">Choose Image</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>
    <string name="send">Send</string>
    <string name="accessibility_downloaded_image">Downloaded image</string>

    <string name="rational_image_perm">This sample will read an image from local storage to upload to Cloud Storage.</string>

    <!-- Database -->
    <string name="start_chatting">No messages. Start chatting at the bottom!</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_in">Signed In</string>
    <string name="anonymous_auth_failed_msg">
        Anonymous authentication failed, various components of the demo will not work.
        Make sure your device is online and that Anonymous Auth is configured in your Firebase project
        (https://console.firebase.google.com/project/_/authentication/providers)
    </string>

    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_records">Records</string>
    <string name="title_graphs">Graphs</string>
    <string name="title_profile">Profile</string>
    <string name="title_doctor">Doctor</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!--OJO: COSAS NUEVAS-->

    <string name="title_activity_login">Start</string>
    <string name="title_activity_recognize">Recognize Text</string>
    <string name="text_btn_exit">Exit</string>
    <string name="text_btn_camera">Camera</string>
    <string name="text_btn_login">Start</string>
    <string name="text_btn_take_pic">Take Picture</string>
    <string name="text_hint_result">Result</string>
    <string name="text_lb_select_language">Select Options</string>
    <string-array name="language_array">
        <item>English</item>
    </string-array>
    <string-array name="threshold_array">
        <item>85</item>
        <item>100</item>
        <item>125</item>
        <item>150</item>
    </string-array>

    <!-- Tab scan tensiometer -->
    <string name="scan_instructions">Measure your blood pressure using a digital medical tensiometer.
                                    Once you have the results, hit SCAN button.</string>
    <string name="scan_button">Scan</string>
    <string name="scan_again_button">Scan again</string>

    <!-- Tab scan quick check -->
    <string name="measure_instructions">In order to measure your heart rate, put your index finger over
        the camera lens and over the flash as shown in the image above. Results will appear on the screen.</string>
    <string name="measure_button">Measure</string>


    <!-- Tab type -->
    <string name="systolic">Systolic pressure</string>
    <string name="diastolic">Diastolic pressure</string>
    <string name="save">Save</string>
    <string name="mic">Mic button</string>
    <string name="no_result">No result. Hit SCAN</string>

    <!-- Tab doctor -->
    <string name="no_doctor">"You haven't set any doctor's information. Hit SET INFORMATION button to configure it" </string>
    <string name="button_set_doctor">"SET INFORMATION"</string>
    <string name="doctors_name">Doctor\'s name</string>
    <string name="doctors_phone">Doctor\'s phone number</string>
    <string name="edit">edit</string>
    <string name="delete_record">Delete Record</string>
    <string name="my_reminders">My Reminders</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_reminders">RemindersActivity</string>
    <string name="no_records">You haven\'t add any record.  Hit pencil button to add the first one.</string>
    <string name="no_medicine_reminders">You haven\'t add any medicine reminder.  Hit green button to add the first one.</string>
    <string name="no_pressure_reminders">You haven\'t add any blood pressure reminder.  Hit green button to add the first one.</string>
    <string name="med_name">Medicine name</string>
    <string name="delete_reminder">Delete Reminder</string>
    <string name="edit_reminder">Edit Reminder</string>

</resources>
