<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/taxtTab1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_scan"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/scan_instructions"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/cardview_dark_background"/>

    <Button
        android:id="@+id/button_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:background="@color/colorPrimary"
        android:text="@string/scan_button"
        android:textColor="@color/cardview_light_background" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/taxtTab1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/app_logo"
        app:srcCompat="@drawable/h_logo" />
</RelativeLayout>