<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/docInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/call_button"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="313dp"
            android:contentDescription="@string/mic"
            android:src="@drawable/ic_phone"
            app:backgroundTint="@color/material_green_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.698"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:contentDescription="@string/app_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/dr_icon" />

        <TextView
            android:id="@+id/dr_name"
            android:layout_width="310dp"
            android:layout_height="39dp"
            android:layout_marginBottom="208dp"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="@color/cardview_dark_background"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/dr_phone"
            android:layout_width="212dp"
            android:layout_height="39dp"
            android:layout_marginBottom="144dp"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="@color/cardview_dark_background"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.356"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_edit"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:background="@color/colorPrimary"
            android:text="@string/edit"
            android:textColor="@color/cardview_light_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/setDocLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="56dp"
            android:contentDescription="@string/app_logo"
            app:layout_constraintBottom_toTopOf="@+id/doctors_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/dr_icon" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            android:textColor="@color/cardview_light_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/doctors_name"
            android:layout_width="322dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="120dp"
            android:ems="10"
            android:hint="@string/doctors_name"
            android:inputType="textCapWords"
            android:textColor="@color/cardview_dark_background"
            android:textColorHint="#C7BCBC"
            app:layout_constraintBottom_toTopOf="@+id/button_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            android:maxLength="40"/>

        <EditText
            android:id="@+id/doctors_number"
            android:layout_width="322dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="72dp"
            android:ems="10"
            android:hint="@string/doctors_phone"
            android:inputType="textPersonName|phone"
            android:textColor="@color/cardview_dark_background"
            android:textColorHint="#C7BCBC"
            app:layout_constraintBottom_toTopOf="@+id/button_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            android:maxLength="10"/>
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/noDocLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="302dp"
            android:contentDescription="@string/app_logo"
            app:srcCompat="@drawable/dr_icon" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="72dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/no_doctor"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/cardview_dark_background"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_create_doctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="-25dp"
            android:background="@color/colorPrimary"
            android:text="@string/button_set_doctor"
            android:textColor="@color/cardview_light_background" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="31dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:src="@drawable/ic_add_record"
        app:backgroundTint="@color/colorPrimary" />

</RelativeLayout>